fixed copy email button on mobile

--- a/src/sass/components/_contact.scss
+++ b/src/sass/components/_contact.scss
@@ -27,24 +27,25 @@
             justify-content: center;
             margin-top: 20px;
 
-            .copy-button,
-            .is-copied-button {
+            .copy-button {
                 @include button-blue;
                 width: 200px;
                 height: 55px;
             }
 
             .copy-button {
-                &:hover,
-                &:focus {
+                &:hover {
                     @include button-yellow;
                     @include buttonHover;
                 }
             }
 
             .is-copied-button {
+                @include button-blue;
                 background: linear-gradient(90deg, #eeb265 0%, $bgc-btn-yellow 100%);
                 box-shadow: 1px 1px 10px $bgc-btn-yellow;
+                width: 200px;
+                height: 55px;
             }
         }
 
