--- a/src/sass/generic/_global.scss
+++ b/src/sass/generic/_global.scss
@@ -19,7 +19,7 @@ body {
         overflow: hidden;
 
         main {
-            flex: 1;
+            flex-grow: 1;
         }
     }
 
